# topo_oa

./: Dockerfile  README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/datasets/: dataset2.csv
backend/app/pipeline/: __init__.py  pipeline.py  step.py
backend/app/pipeline/ingestion/: __init__.py  csv_ingestion.py  json_ingestion.py  pdf_ingestion.py  pptx_ingestion.py
backend/app/pipeline/processing/: __init__.py  key_formatter.py  parse_str_to_num.py  process_adhoc_pptx.py
backend/app/routers/: data.py  data_router.py
backend/app/services/: __init__.py  data_ingestor.py  data_provider.py
backend/tests/: test_main.py
backend/tests/routers/: test_data_router.py
backend/tests/test_datasets/: pptx_dataset.pptx
backend/tests/test_pipeline/: test_pipeline.py
backend/tests/test_pipeline/test_ingestion/: test_csv_ingestion.py  test_json_ingestion.py  test_pdf_ingestion.py  test_pptx_ingestion.py
backend/tests/test_pipeline/test_processing/: test_key_formatter.py  test_parse_str_to_num.py  test_process_adhoc_pptx.py
backend/tests/test_services/: test_data_ingestor.py  test_data_provider.py
backend/tests/test_services/test_datasets/: csv_dataset.csv  json_dataset.json
frontend/: .env.production  README.md  eslint.config.mjs  jest.config.ts  package-lock.json  package.json
frontend/__test__/: page.test.tsx
frontend/__test__/components/: csv_dataset.test.tsx  json_dataset.test.tsx  pdf_dataset.test.tsx
frontend/app/: globals.css  page.tsx
frontend/components/: pdf_dataset.tsx
(+4 files in other folders)
