[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nereus Ng Wei Bin <iamnereusng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pandas = "^2.2.3"
python-pptx = "^1.0.2"
pdfplumber = "^0.11.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
